
	* typeck.c (decimal_compute), tree.h: track if cob_decimal computations
	  will be used with new flag_decimal_comp
	* codegen.c (output_standard_includes): additional include gmp.h when
	  cob_decimal is used in one of the generated (sub-)programs
	* codegen.c (output_standard_includes): don't include currently unused
	  stdlib.h, stddef.h, math.h

2019-03-19  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c: use of COB_MAX_NAMELEN
	* cobc.h: comment-explanation for cb_flag_main / cobc_flag_main

2019-03-18  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l, config.def: FR #352 added national-character-literals setting
	  and read of NC"" literals (identical to N"" literals)

2019-03-17  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c: improved error handling for wrong PICTURE clause,
	  including a new warning for uncommon parentheses and
	  only error once for same invalid character
	* tree.c, tree.h, scanner.l, typeck.c, codegen.c, cobc.c: added compiler
	  part for floating-point numeric-edited item (libcob open)
	* parser.y: added parsing for PICTURE clause locale-format

2019-03-16  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: added unqualified_word which consumes qualification
	  checking that it does not occur; used for INDEXED BY and OCCURS KEY
	* parser.y, tree.h, reserved.c, typeck.c: added parsing for
	  LOCALE/NATIONAL ALPHABET, NATIONAL COLLATING SEQUENCE and
	  COLLATING SEQUENCE OF key

2019-03-15  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: drop yacc-compatibility warnings via AM_YFLAGS -Wno-yacc
	  as only bison is supported in any case

2019-03-14  Simon Sobisch <simonsobisch@gnu.org>

	* config.c: hand-merged change 2015-04-27 with an option to go back,
	  see COBC_STORES_CONFIG_VALUES

2019-03-12  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck: implemented table SORT without specifying key,
	  see Patch #42

2019-03-11  Simon Sobisch <simonsobisch@gnu.org>
